--- a/src/SimiasServer/Makefile.am
+++ b/src/SimiasServer/Makefile.am
@@ -13,10 +13,6 @@ PROJECT_FILES = $(srcdir)/SimiasServer.csproj
 
 EXTRA_DIST = $(SimiasServer_CSFILES) $(PROJECT_FILES) App.ico simias.in simias.cmd SimiasServer.exe.config AssemblyInfo.cs.in
 
-AssemblyInfo.cs: $(srcdir)/AssemblyInfo.cs.in
-	sed -e 's,@_VERSION_@,@VERSION@,g' $< > $@
-	chmod +x $@
-
 simias: $(srcdir)/simias.in
 	sed -e 's,@_webbindir_@,@webbindir@,g' -e 's,@_bindir_@,@bindir@,g' $< > $@
 	chmod +x $@
@@ -31,9 +27,13 @@ endif
 
 all: SimiasServer.exe simias
 
-SimiasServer.exe: $(SimiasServer_CSFILES) $(SimiasServer_RESOURCES)
+SimiasServer.exe: AssemblyInfo.cs $(SimiasServer_CSFILES) $(SimiasServer_RESOURCES)
 	$(CSC) /out:$@ $(CSCFLAGS) $(SimiasServer_FLAGS) $(SimiasServer_LIBS:%=/r:%) $(SimiasServer_LIBPATH:%=/lib:%) $(SimiasServer_CSFILES_CSC) $(DOC_FILE_CMD)
-	
+
+AssemblyInfo.cs: $(srcdir)/AssemblyInfo.cs.in
+	sed -e 's,@_VERSION_@,@VERSION@,g' $< > $@
+	chmod +x $@
+
 if DEBUG
 if WINDOWS
 DEBUG_FILES = SimiasServer.pdb
