copied Assembly version to where it woud be read
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@5043 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/ifolder/src/iFolder/AssemblyInfo.cs.in
+++ b/ifolder/src/iFolder/AssemblyInfo.cs.in
@@ -48,6 +48,7 @@ using System.Runtime.InteropServices;
 [assembly: AssemblyProduct("iFolder")]
 [assembly: AssemblyCopyright("(c) 2004 Novell, Inc.")]
 [assembly: AssemblyTrademark("")]
+[assembly: AssemblyVersion("@_VERSION_@")]
 
 [assembly: CLSCompliant(false)]
 [assembly: AssemblyDefaultAlias("Novell.iFolder.dll")]
